--- a/week-1/problems/0-horizontal-align/index.html
+++ b/week-1/problems/0-horizontal-align/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div style="display: flex; justify-content: center;">
+    <div style="display: flex; justify-content: center; width: 1200px; height: 500px;">
         <div class="container">
             <div class="content">
                 <h1>Hello World</h1>
